2013-11-22  Andrew MacLeod  <amacleod@redhat.com>

	* trans.c: Add required include files from gimple.h.
	* trans-expr.c: Likewise
	* trans-openmp.c: Likewise

2013-11-22  David Malcolm  <dmalcolm@redhat.com>

	* trans.c (trans_runtime_error_vararg): Remove use of input_line
	macro.

2013-11-17  Andrew MacLeod  <amacleod@redhat.com>

	* fortran/trans-intrinsic.c: Include tree-nested.h.

2013-11-14  Andrew MacLeod  <amacleod@redhat.com>

	* trans-expr.c: Include only gimplify.h and gimple.h as needed.
	* trans-openmp.c: Likewise.

2013-11-14  Diego Novillo  <dnovillo@google.com>

	* decl.c: Include stringpool.h.
	* iresolve.c: Include stringpool.h.
	* match.c: Include stringpool.h.
	* module.c: Include stringpool.h.
	* target-memory.c: Include stor-layout.h.
	* trans-common.c: Include stringpool.h.
	Include stor-layout.h.
	Include varasm.h.
	* trans-const.c: Include stor-layout.h.
	* trans-decl.c: Include stringpool.h.
	Include stor-layout.h.
	Include varasm.h.
	Include attribs.h.
	* trans-expr.c: Include stringpool.h.
	* trans-intrinsic.c: Include stringpool.h.
	Include tree-nested.h.
	Include stor-layout.h.
	* trans-io.c: Include stringpool.h.
	Include stor-layout.h.
	* trans-openmp.c: Include stringpool.h.
	* trans-stmt.c: Include stringpool.h.
	* trans-types.c: Include stor-layout.h.
	Include stringpool.h.
	* trans.c: Include stringpool.h.

2013-11-12  Andrew MacLeod  <amacleod@redhat.com>

	* f95-lang.c: Don't include gimple.h.
	* trans-array.c: Include gimple-expr.h instead of gimple.h.
	* trans.c: Likewise.
	* trans-decl.c: Likewise.
	* trans-expr.c: Include gimplify.h.
	* trans-openmp.c: Likewise.

2013-11-07  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58471
	* primary.c (gfc_expr_attr): Check for result symbol.

2013-11-06  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* gfortran.texi: Fix typo.

2013-11-05  Tobias Burnus  <burnus@net-b.de>

	* lang.opt (-Wdate-time): New option
	* cpp.c (gfc_cpp_option_data): Add warn_date_time.